Cleanup pom and .gitignore